-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: Dart - Compiler
-
Labels:None
PROBLEM
The dart generator produces inconsistent code for argument names that start with an uppercase letter. The function signature uses lowercase, but the function body uses uppercase.
SOLUTION
Pass the argument name through the get_field_name() function, to generate code consistent with the other references of argument names.
- is cloned by
-
THRIFT-3589 Dart generator uses wrong name in constructor for uppercase arguments with defaults
-
- Closed
-